# robosub_simulator

./: .gitattributes  .travis.yml  CMakeLists.txt  CPPLINT.cfg  package.xml
devel/: setup.bash
examples/: CMakeLists.txt  model_plugin_example.cpp  model_plugin_example.h  world_plugin_example.cpp  world_plugin_example.h
launch/: gazebo.launch  test.launch  uwsim.launch
models/2018/dice/: dice.sdf
models/2018/gate/: model.config
models/2018/prequal-gate/: gate.sdf  model.config
models/2018/prequal-pole/: model.config  pole.sdf
models/2018/roulette/: roulette_wheel.sdf
models/bin_cover/: BinCover.3ds
models/bins/: Bin.3ds  bin_cover.sdf  model.config
models/buoys/: Buoys.3ds  buoys.dae  buoys.sdf  buoys.stl
models/cobalt/: Cobalt.stl  model.sdf  model.urdf
models/cobalt_vis/: model.config  model.sdf
models/gate/: Gate.3ds  gate.dae  gate.sdf  gate.stl
models/gibb/: gibb.sdf  model.config
models/marker/: marker.sdf  model.config
models/navigation_channel/: NavChannel.3ds  channel.sdf
models/new_gate/: gate1.dae  model.config  new_gate.sdf
models/octagon/: Octagon.3ds  octagon.sdf
models/path_markers/: PathMarker.3ds
models/pool/: model.config  pool.sdf  pool.stl
models/qualification_pole/: Post.sdf  Post1.dae  model.config
models/test/Hit_panel/: model.config  model.sdf
models/torpedo/: torpedo.sdf
models/torpedo_target/: TorpedoTarget.3ds  TorpedoTarget.dae  torpedo_target.sdf
param/: bottom_camera.yaml  cobalt_sim.yaml  left_calibration.json  left_camera.yaml  obstacles.yaml  right_calibration.json  right_camera.yaml  simulator.yaml
scripts/: create_sensor_vsp.sh  create_thruster_vsp.sh  jump_bins.sh  jump_buoys.sh  jump_channel.sh  jump_gate.sh  jump_octagon.sh  jump_target.sh  localization_particle_probability_error_ploy.py  sim_vision_network.py  spawn_robosub.sh  start_switch.py
src/: CMakeLists.txt  ThrottledPublisher.hpp  bno055_emulator.cpp  bno055_emulator.h  bumper.cpp  bumper.h  buoyancy_improved.cpp  buoyancy_improved.h  localization_harness.cpp  maestro_emulator.cpp  maestro_emulator.h  marker_dropper.cpp  marker_dropper.h  particle_filter_visualizer.cpp  particle_filter_visualizer.h  roulette_spinner.cpp  roulette_spinner.h  serial.cpp  serial.h  simulator_bridge.cpp  thruster.cpp  thruster.h  thruster_plugin.cpp  thruster_plugin.h  torpedo_shooter.cpp  torpedo_shooter.h
worlds/: gibb-qualification.world  gibb.world  gibb_qualification.world  test.world  transdec.world  underwater.world  uwsim_world.xml
