#add_library(world_plugin_example SHARED world_plugin_example.cpp)
#target_link_libraries(world_plugin_example ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
#add_library(model_plugin_example SHARED model_plugin_example.cpp)
#target_link_libraries(model_plugin_example ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
